--- a/www/src/css/style.css
+++ b/www/src/css/style.css
@@ -22,25 +22,7 @@
     margin-bottom: 15px;
 }
 
-.button {
-    display: inline-block;
-    text-decoration: none;
-    width: 60px;
-    height: 32px;
-    overflow: hidden;
-    line-height: 40px;
-    background: #7ce216;
-    width: 96px;
-    margin: 30px auto;	
-    margin-bottom: 0;	
-}
-.button-red {
-    background: #d70000;
-}
-.button:hover {
-    -webkit-transform: scale3d(0.9, 0.9, 1);
-    background: #70cf10;
-}
-.button-red:hover {
-    background: #d70000;
+.button-exit {
+    color: #FFFFFF;
+    background-color: red;
 }
